# imgui_gradient

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  generate_flags_checkbox.py  imgui.ini
.github/: FUNDING.yml
.github/workflows/: build_and_run_tests.yml
include/: PositionMode.h
include/imgui_gradient/: Gradient.h  GradientMarks.h  GradientOptions.h  Interpolation.h  Marks.h  gradient_options_debug.h  gradient_variables.h  gradient_widgets.h  imgui_draw.h  imgui_draw_utils.h  imgui_gradient.hpp  random.h  utils.h
src/: ColorRGBA.hpp  Flags.hpp  Gradient.cpp  Gradient.h  Gradient.hpp  GradientOptions.h  GradientWidget.cpp  GradientWidget.hpp  ImGuiGradientFlags.h  ImGuiGradientFlags.hpp  Interpolation.h  Interpolation.hpp  Mark.hpp  MarkId.hpp  Marks.h  Marks.hpp  PositionMode.hpp  RelativePosition.cpp  RelativePosition.hpp  Settings.hpp  State.hpp  SurroundingMarks.hpp  Utils.hpp  WrapMode.hpp  button_disabled.cpp  button_disabled.hpp  color_conversions.cpp  extra_widgets.cpp  extra_widgets.hpp  extras_widgets.cpp  extras_widgets.hpp  gradient_settings.hpp  gradient_variables.h  gradient_variables.hpp  gradient_widgets.h  gradient_widgets.hpp  imgui_draw.cpp  imgui_draw.h  imgui_draw.hpp  imgui_draw_utils.h  (+12 more)
tests/: CMakeLists.txt  checkboxes_for_all_flags.hpp  gradient_options_debug.h  gradient_options_debug.hpp  tests.cpp
